2013-11-01  Per Bothner  <per@bothner.com>

	* XMLFilter.java (consume): Rename to writePosition.
	* XMLPrinter.java: Likewise.

2013-02-23  Per Bothner  <per@bothner.com>

	* TextUtils.java (stingValue): Special handling for gnu.text.Char
	and java.lang.Character.

2013-01-23  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (startAttribute): Check for null type.

	* XMLFilter.java (startAttribute): Require type to be a Symbol.

2013-01-15  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (startElement): Check that type isn't null.

2012-10-21  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (writeObject): Remove never-true instanceof test.

	* XMLFilter.java (closeStartTag): Better error if start tag is not
	a symbol.

2012-10-03  Per Bothner  <per@bothner.com>

	* XMLFilter.java (writeObject): Fix buggy handling of attribute
	implicitly specified by a Keyword, as when called from MakeElement.

2012-09-20  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (indentLoc): Add generic parameters.

2010-11-26  Per Bothner  <per@bothner.com>

	* XName.java: Update, since Symbol constructor is now protected.

2010-11-21  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (writeDoctypeIfDefined, writeDoctype): New methods.
	(startElement): Use writeDoctypeIfDefined.

2010-08-02  Per Bothner  <per@bothner.com>

	* XMLFilter.java (writeObject): Treat a java.util.List as
	multiple value - just iterate and write each element.

2010-07-05  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (isHtmlOrXhtml): New flag.
	(getHtmlTag): New method.
	(endElement): Re-do logic for handle "empty-elements".

2010-07-01  Per Bothner  <per@bothner.com>

	* XMLPrinter.java: Add space after xml-declaration, if needed.

2007-12-30  Per Bothner  <per@bothner.com>

	* XMLParser.java: Add support for XML 'standalone' declaration.

2007-01-20  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (setStyle): If html, pre-establish html namespace.

2007-01-16  Per Bothner  <per@bothner.com>
